src/styles/note.scss
@import "sizes";
@import "colors";

.noteContainer {
    padding: 20px 0 20px 5px;
    background-color: $mainColorLight;
    margin: 5px 5px 8px 5px;
    cursor: pointer;
    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
    transition: box-shadow .2s, transform .25s;
}


@media screen and (min-width: $mediumWindow) {
    .noteContainer {
        flex: 0 0 290px;
    }
}

.noteContainer:hover {
    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
}

.noteContainer.active {
    cursor: default;
    transform: translate(1%, 0);
    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
}

.noteName, .noteNameInput {
    margin: 2px 0 0 10px;
    font-size: 17px;
    color: $mainColorDark;
}

.noteName {
    margin-bottom: 2px;
    height: 20px;
}

.noteContainer.active .noteName {
    font-weight: bold;
}

.noteNameInput {
    height: 20px;
    border: solid white;
    border-width: 0 0 2px 0;
    background-color: transparent;
    padding: 0;
    outline: none;
}

